# photo-organizer

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  architecture.md  docker-compose.yml  pyproject.toml
docs/architecture/: architecture.md  date-resolver-spec.md  metadata-extractor-spec.md  path-date-extractor-spec.md  planner-specs.md  scanner-specs.md
photosort/: __init__.py  cli.py  config.py
photosort/analysis/: __init__.py  cli.py  extractor_debug.py
photosort/database/: __init__.py  connection.py  models.py  schema.py
photosort/extractor/: __init__.py  exiftool.py  extractor.py  parser.py  strategies.py
photosort/planner/: __init__.py  analyzer.py  path_builder.py  planner.py  resolver.py  sidecar.py
photosort/resolver/: __init__.py  path_date_extractor.py  resolver.py
photosort/scanner/: __init__.py  filesystem.py  progress.py  scanner.py  uuid.py
tests/: __init__.py  test_database.py  test_date_resolver.py  test_filesystem.py  test_metadata_extractor.py  test_path_date_extractor.py  test_planner.py  test_resolver.py  test_scanner.py
